fix gap at the right in smaller screen size

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 :root {
-  display: flex;
+  display: grid;
 }
